fixed squished avatar, missing bio field, maybe uploaded avatar size

--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -32,7 +32,6 @@
     order: -1;
     margin-inline-end: 2vw;
     width: 8vmin;
-    height: 8vmin;
     align-self: flex-start;
 }
 
