--- a/src/templates/key.css
+++ b/src/templates/key.css
@@ -40,6 +40,9 @@
 .artist_hero .avatar {
     border-radius: 50%;
     border: solid 3px white;
+    max-width: 180px;
+    max-height: 180px;
+    object-fit: cover;
 }
 
 .artist_hero .artist_bio {
